--- a/css/style.css
+++ b/css/style.css
@@ -250,3 +250,70 @@ section {
 #back-to-categories-btn:hover {
     background-color: #ec971f;
 }
+
+
+/* Stylizacja przycisku z obrazkiem jako tło */
+.recipe-button {
+    width: 150px;
+    height: 150px;
+    background-size: cover;
+    background-position: center;
+    border: none;
+    color: white;
+    font-size: 1.2em;
+    text-shadow: 1px 1px 2px black;
+    cursor: pointer;
+    border-radius: 5px;
+    margin: 10px;
+}
+
+/* Ustawienia wyglądu kafelków z przepisami */
+.recipe-tile {
+    width: 200px;
+    height: 200px;
+    background-size:cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    display: inline-block;
+    margin: 10px;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 10;
+    opacity: 1;
+}
+
+
+.recipe-title {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    font-size: 16px;
+}
+
+.pagination {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.pagination button {
+    margin: 5px;
+    padding: 10px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.hidden {
+    display: none;
+}
+
+
+
+
+
