--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,75 @@ section {
     background-color: #e64a19; /* Zmiana koloru po najechaniu */
 }
 
+/* Nowa sekcja "Moje konto" */
+#account-section {
+    background-color: transparent; /* Przezroczyste tło */
+    padding: 20px;
+    border-radius: 10px;
+    width: 50%;
+    margin: 40px auto;
+    color: white; /* Kolor tekstu */
+    text-align: center;
+}
+
+#account-section h2 {
+    color: #ffffff; /* Kolor nagłówka sekcji "Moje konto" */
+    font-size: 1.9rem;
+    margin-bottom: 20px;
+}
+
+/* Lista przepisów użytkownika w sekcji "Moje konto" */
+#my-recipes-list {
+    list-style-type: none; /* Usunięcie punktów listy */
+    padding: 0;
+    margin: 20px 0;
+    text-align: left; /* Wyśrodkowanie listy */
+}
+
+#my-recipes-list li {
+    background-color: rgba(0, 0, 0, 0.7); /* Tło dla każdego przepisu */
+    color: #ffffff; /* Kolor tekstu */
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    font-size: 1.2rem;
+}
+
+/* Styl dla przycisku "Moje konto" */
+#account-btn {
+    background-color: #3D94F6; /* Niebieski kolor tła */
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s, box-shadow 0.3s;
+    margin-right: 10px; /* Odstęp między przyciskiem a resztą elementów */
+}
+
+#account-btn:hover {
+    background-color: #1E62D0; /* Zmiana koloru tła po najechaniu */
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3); /* Cień po najechaniu */
+}
+
+/* Styl dla przycisku "Wyświetl moje przepisy" */
+#my-recipes-btn {
+    background-color: #f0ad4e; /* Pomarańczowy kolor tła */
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s;
+}
+
+#my-recipes-btn:hover {
+    background-color: #ec971f; /* Zmiana koloru tła po najechaniu */
+}
+
+
 
 .BUTTON_BVY {
     background: #3D94F6;
