--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ header {
     background-color:transparent;
     padding: 10px;
     text-align: center;
-    color: aqua;
+    color: rgb(255, 0, 0);
 }
 
 h1 {
@@ -82,6 +82,7 @@ section {
     border: 2px solid #b78b8bb3; /* Ujednolicenie z formularzem przepisu */
     box-sizing: border-box;
 }
+
 
 #register-form button,
 #login-form button {
@@ -162,13 +163,23 @@ section {
 }
 
 #my-recipes-list li {
-    background-color: rgba(0, 0, 0, 0.7); /* Tło dla każdego przepisu */
-    color: #ffffff; /* Kolor tekstu */
+    background-color: rgba(246, 243, 243, 0.7); /* Tło dla każdego przepisu */
+    color: #ececec; /* Kolor tekstu */
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
     font-size: 1.2rem;
 }
+
+.recipe-details {
+    background-color: rgba(255, 255, 255, 0.6); /* Białe, przezroczyste tło */
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+    color: #000000; /* Kolor tekstu */
+    font-size: 1.2rem;
+}
+
 
 /* Styl dla przycisku "Moje konto" */
 #account-btn {
@@ -359,6 +370,7 @@ section {
 
 
 #recipes-list {
+    /* background-color: rgba(246, 243, 243, 0.7); */
     color: #ffffff; 
     font-size: 1.3rem; 
 }
@@ -593,3 +605,12 @@ ol li {
     display: inline-block; 
     font-family: Arial, sans-serif; 
 }
+
+
+/* .recipe-details-background {
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+} */
+
