--- a/css/style.css
+++ b/css/style.css
@@ -637,8 +637,8 @@ ol li {
     position: fixed; 
     bottom: 10px; 
     right: 10px; 
-    background-color: rgba(255, 255, 255, 0.1); 
-    color: #daec56; 
+    background-color: rgba(255, 255, 255, 0.2); 
+    color: #000000; 
     padding: 10px; 
     border-radius: 5px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
@@ -648,7 +648,7 @@ ol li {
 }
 
 #contact-footer a {
-    color: #daec56;
+    color: #000000;
     text-decoration: none; 
 }
 
